--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-faiss-cpu           
-langchain-community 
-langchain-groq      
-load-dotenv         
-langchain_huggingface
-pymupdf4llm
+faiss-cpu             
+ffmpeg                
+gradio                
+gTTS                  
+langchain-community   
+langchain-groq        
+langchain-huggingface 
+load-dotenv           
+PyAudio               
+pygame                
+pymupdf4llm           
+SpeechRecognition    
